--- a/styles_old.css
+++ b/styles_old.css
@@ -10,17 +10,7 @@ body {
   margin: 0;
 }
 
-header {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
-  margin: 3rem;
-  border-radius: 10px;
-  padding: 1rem;
-  background-color: #1b995e;
-  color: white;
-  text-align: center;
-}
-
-#assignment {
+section {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   margin: 3rem;
   border-radius: 10px;
@@ -28,34 +18,34 @@ header {
   text-align: center;
 }
 
-#assignment h2 {
+h2 {
   font-size: 2rem;
   border-bottom: 4px solid #ccc;
-  color: #1b995e;
+  color: #970076;
   margin: 0 0 1rem 0;
 }
 
-#assignment p {
+p {
   font-size: 1.25rem;
   font-weight: bold;
-  background-color: #8ddba4;
+  background-color: #970076;
   padding: 0.5rem;
-  color: #1f1f1f;
+  color: white;
   border-radius: 25px;
 }
 
-#assignment input {
+input {
   font: inherit;
   border: 1px solid #ccc;
 }
 
-#assignment input:focus {
+input:focus {
   outline: none;
   border-color: #1b995e;
   background-color: #d7fdeb;
 }
 
-#assignment button {
+button {
   font: inherit;
   cursor: pointer;
   border: 1px solid #ff0077;
@@ -65,8 +55,8 @@ header {
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.26);
 }
 
-#assignment button:hover,
-#assignment button:active {
+button:hover,
+button:active {
   background-color: #ec3169;
   border-color: #ec3169;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.26);
